objects/Pending_ReAssignment_Approvals__c.object
<CustomObject>
    <fields>
        <fullName>User_ID__c</fullName>
        <externalId>true</externalId>
        <label>User  ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User__r.FirstName+&apos; &apos;+User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pending_ReAssignment_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pending ReAssignment Approvals</label>
    <nameField>
        <displayFormat>PRA-{0000}</displayFormat>
        <label>Pending ReAssignment Approvals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending ReAssignment Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>